codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 154
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):

  >_ OpenAI Codex (v<VERSION> (warrenfalk custom))
     loading

  Pull up a prompt.


› Ask Codex to do anything

  ? for shortcuts
---
resuming (48 columns):

  >_ OpenAI Codex (v<VERSION> (warrenfalk custom))
     loading
  Resuming session…

› Ask Codex to do anything

  ? for shortcuts
---
forking (48 columns):

  >_ OpenAI Codex (v<VERSION> (warrenfalk custom))
     loading
  Forking session…

› draft while loading


---
multiline (48 columns):

  >_ OpenAI Codex (v<VERSION> (warrenfalk custom))
     loading

  Pull up a prompt.


› first startup line
  second startup line


---
narrow (18 columns):

  >_ OpenAI Codex…
     loading

  Pull up a promp…


› first startup
  line
  second startup
  line
